fix info window flicker and other minor bugs

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -2,7 +2,6 @@
 @import "./flatly.min.css";
 @import "./font-awesome.css";
 @import "../bower_components/angular-flash-alert/dist/angular-flash.min.css";
-@import "./activity-icons.css";
 
 
 html {
@@ -84,7 +83,7 @@ img, h1, h2, h3, h4, h5, h6 {
 
 #flash {
   position: absolute;
-  z-index: 100;
+  z-index: 101;
   right: 5px;
   top: 3px;
   position: fixed;
@@ -106,7 +105,7 @@ img, h1, h2, h3, h4, h5, h6 {
     justify-content: space-between;
     margin: auto -15px;
     height: 41px;
-    z-index: 999;
+    z-index: 21;
     background: -moz-linear-gradient(top, #71B045 0%,  #61A055 100%);
     background: -webkit-linear-gradient(top, #71B045 0%, #61A055 100%); 
     background: linear-gradient(to bottom, #71B045 0%, #61A055 100%);
@@ -384,6 +383,9 @@ ul#park-amenities {
   z-index: 11;
   right: 8em;
   top: 5px;
+  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+  -moz-box-shadow:    0 2px 5px 0 rgba(0, 0, 0, 0.26);
+  box-shadow:         0 2px 5px 0 rgba(0, 0, 0, 0.26);
 
   .icon-search {
     position: absolute;
@@ -397,6 +399,25 @@ ul#park-amenities {
     border: 2px solid #669834;
   }
 
+  input#search-box {
+    position: relative;
+    width: 40px;
+    height: 40px;
+    opacity: 0;
+    z-index: 13;
+    cursor: pointer;
+    -webkit-transform:  all .25s cubic-bezier(0.345, 0, 0.25, 1);
+    -moz-transform:     all .25s cubic-bezier(0.345, 0, 0.25, 1);
+    -o-transform:       all .25s cubic-bezier(0.345, 0, 0.25, 1);
+    -ms-transform:      all .25s cubic-bezier(0.345, 0, 0.25, 1);
+    transition:         all .25s cubic-bezier(0.345, 0, 0.25, 1);
+
+    &:focus {
+      cursor: text;
+      width: 250px;
+      opacity: 1;
+    }
+  }
 }
 
 .map-bottom-right {
@@ -412,25 +433,6 @@ ul#park-amenities {
 
 
 
-input#search-box {
-  position: relative;
-  width: 40px;
-  height: 40px;
-  opacity: 0;
-  z-index: 13;
-  cursor: pointer;
-  -webkit-transform:  all .25s cubic-bezier(0.345, 0, 0.25, 1);
-  -moz-transform:     all .25s cubic-bezier(0.345, 0, 0.25, 1);
-  -o-transform:       all .25s cubic-bezier(0.345, 0, 0.25, 1);
-  -ms-transform:      all .25s cubic-bezier(0.345, 0, 0.25, 1);
-  transition:         all .25s cubic-bezier(0.345, 0, 0.25, 1);
-
-  &:focus {
-    cursor: text;
-    width: 250px;
-    opacity: 1;
-  }
-}
 
 
 #autocomplete {
@@ -523,14 +525,25 @@ html, body, #map-canvas {
   height: 20em;
 }
 
-#activity-window {
-  // max-height: 50px;
-  // max-width: 80px;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  -ms-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
+#activity-window, #park-window {
+  opacity: 0;
+
+  -moz-animation:     show-me 0.3s ease-in 0s 1 normal;
+  -webkit-animation:  show-me 0.3s ease-in 0s 1 normal;
+  -o-animation:       show-me 0.3s ease-in 0s 1 normal;
+  animation:          show-me 0.3s ease-in 0s 1 normal;
+  
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+}
+
+@keyframes show-me {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+@-webkit-keyframes show-me {
+  from { opacity: 0; }
+  to { opacity: 1; }
 }
 
 .full-height {
@@ -645,6 +658,10 @@ html, body, #map-canvas {
 }
 
 @media screen and (max-width: 767px) {
+  #flash span {
+    font-size: 0.9em;
+  }
+
   #mobile-nav {
     display: block;
   }
@@ -681,8 +698,10 @@ html, body, #map-canvas {
     // margin-right: 5px;
   }
 
-  input#search-box:focus {
-    width: 165px;
+  #searchbox-container input#search-box {
+    &:focus {
+      width: 190px;
+    }
   }
 
   .footer {
